--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "moment": "^2.28.0",
     "moment-timezone": "^0.5.31",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-moment": "^0.9.7",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-scroll": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
