--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
     "bootstrap": "^4.1.1",
+    "emailjs-com": "^2.6.3",
     "moment": "^2.28.0",
     "moment-timezone": "^0.5.31",
     "react": "^16.13.1",
@@ -18,7 +19,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-scroll": "^1.8.1",
-    "react-transition-group": "^4.4.1"
+    "react-transition-group": "^4.4.1",
+    "sweetalert2": "^10.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
